Fix for experience fragment extra margin

--- a/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_utils.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_utils.scss
@@ -272,5 +272,5 @@ $progress-units: (
 }
 
 .xf-content-height {
-    margin: 0 0;
+    margin: 0 0 !important;
 }
